Fixed blog witdth layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@ body {
 }
 
 img {
-	max-width: 1200px;
+	min-width: 0;
+	width: 1200px;
+	max-width: 100vw;
 	object-fit: contain;
 }
 
@@ -151,6 +153,7 @@ div {
 	flex-direction: column;
 	padding: var(--default-padding);
 	max-width: 1200px;
+	min-width: 0px;
 	width: 1200px;
 }
 
@@ -185,12 +188,14 @@ div {
 	flex: 1;
 	height: 100%;
 }
-
 #blog-md-wrapper {
 	display: flex;
 	flex-direction: column;
 	max-height: 100%;
 	overflow-y: scroll;
+	max-width: 100vw;
+	width: 1200px;
+	min-width: 0;
 }
 
 #blog-preview-wrapper {
@@ -214,7 +219,7 @@ div {
 }
 
 #blog-preview-wrapper p>img {
-		height: auto;
-		max-height: 100%;
-		max-width: 100%;
+	height: auto;
+	max-height: 100%;
+	max-width: 100%;
 }
